--- a/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
+++ b/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
@@ -8,7 +8,39 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Logic\Controller\" />
+    <None Remove="Sources\bckgrnd1.png" />
+    <None Remove="Sources\bckgrnd2.png" />
+    <None Remove="Sources\bckgrnd3.png" />
+    <None Remove="Sources\Mossy_FloatingPlatforms_Medium_n_Small.png" />
+    <None Remove="Sources\Mossy_FloatingPlatforms_Single_Big.png" />
+    <None Remove="Sources\Mossy_FloatingPlatforms_small.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Sources\bckgrnd1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\bckgrnd2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\bckgrnd3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\Mossy_FloatingPlatforms_Medium_n_Small.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\Mossy_FloatingPlatforms_Single_Big.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\Mossy_FloatingPlatforms_small.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Sources\Her.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
