add MediaPlayer test

--- a/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
+++ b/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
@@ -41,6 +41,12 @@
     <None Update="Sources\Her.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Sources\Sounds\game_bcg_music.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Sources\Sounds\hatterzene_lol.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
