--- a/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
+++ b/King_of_the_Hill/King_of_the_Hill/King_of_the_Hill.csproj
@@ -11,6 +11,8 @@
     <None Remove="Sources\bckgrnd1.png" />
     <None Remove="Sources\bckgrnd2.png" />
     <None Remove="Sources\bckgrnd3.png" />
+    <None Remove="Sources\knight\knight 3 idle.png" />
+    <None Remove="Sources\knight\knight idle.gif" />
     <None Remove="Sources\Mossy_FloatingPlatforms_Medium_n_Small.png" />
     <None Remove="Sources\Mossy_FloatingPlatforms_Single_Big.png" />
     <None Remove="Sources\Mossy_FloatingPlatforms_small.png" />
@@ -26,6 +28,12 @@
     <Content Include="Sources\bckgrnd3.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Sources\knight\knight 3 idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sources\knight\knight idle.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Sources\Mossy_FloatingPlatforms_Medium_n_Small.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -35,6 +43,10 @@
     <Content Include="Sources\Mossy_FloatingPlatforms_small.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
